--- a/client/src/style/pages/login.scss
+++ b/client/src/style/pages/login.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "../variables";
 
 .login-form {
   display: flex;
@@ -9,5 +9,13 @@
   > * {
     display: block;
     margin-bottom: 15px;
+  }
+}
+
+.login-page {
+  .padded-section {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
   }
 }
