--- a/client/src/style/pages/shopping-list.scss
+++ b/client/src/style/pages/shopping-list.scss
@@ -5,9 +5,31 @@
   padding: 0 15px;
   display: flex;
 
-  input {
+  .input-wrapper {
     flex-grow: 1;
+    min-width: 0;
     margin-right: 7px;
+    position: relative;
+
+    input {
+      width: 100%;
+    }
+
+    > div {
+      top: 0 !important;
+      position: static !important;
+      min-width: 0 !important;
+      cursor: pointer;
+      border: 1px solid silver;
+    }
+  }
+}
+
+.autocomplete-item {
+  padding: 10px !important;
+
+  &.highlighted {
+    background: $layout-base-color;
   }
 }
 
