shopping list page

--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -5,6 +5,8 @@
 @import "pages/lists";
 @import "pages/shopping-list";
 @import "components/shopping-list-tile";
+@import "components/shopping-list-item";
+@import "components/add-product";
 
 body {
   font-family: 'Open Sans', sans-serif;
