--- a/client/src/style/components/shopping-list-item.scss
+++ b/client/src/style/components/shopping-list-item.scss
@@ -1,7 +1,63 @@
 @import "../variables";
 
 .shopping-list-item {
+  height: 35px;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  padding: 5px 15px;
 
+  .container {
+    position: relative;
+    width: 22px;
+    height: 22px;
+    margin-right: 20px;
+
+    label {
+      cursor: pointer;
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      top: 0;
+      border-radius: 4px;
+      border: 1px solid silver;
+      left: 0;
+      background: white;
+    }
+
+
+    label:after {
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      filter: alpha(opacity=0);
+      opacity: 0;
+      content: '';
+      position: absolute;
+      width: 9px;
+      height: 5px;
+      background: transparent;
+      top: 4px;
+      left: 4px;
+      border: 3px solid silver;
+      border-top: none;
+      border-right: none;
+
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+    }
+
+    label:hover::after {
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+      filter: alpha(opacity=30);
+      opacity: 0.3;
+    }
+
+    input[type=checkbox]:checked + label:after {
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+      filter: alpha(opacity=100);
+      opacity: 1;
+    }
+
+  }
 }
