--- a/client/src/style/components/shopping-list-item.scss
+++ b/client/src/style/components/shopping-list-item.scss
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 5px 15px;
 
-  .container {
+  .checkbox {
     position: relative;
     width: 22px;
     height: 22px;
@@ -59,5 +59,22 @@
       opacity: 1;
     }
 
+  }
+
+  .product {
+    flex-grow: 1;
+  }
+
+  .quantity {
+    width: 100px;
+  }
+
+  .delete-button {
+    background: url('icons/delete-icon.png') no-repeat;
+    background-size: 17px;
+    width: 18px;
+    height: 20px;
+    border: none;
+    cursor: pointer;
   }
 }
