--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -7,11 +7,16 @@
 @import "components/shopping-list-tile";
 @import "components/shopping-list-item";
 @import "components/add-product";
+@import "fontawesome-all.min.css";
 
 body {
   font-family: 'Open Sans', sans-serif;
   color: $text-color;
   font-size: 16px;
+}
+
+button {
+  border-style: solid;
 }
 
 strong {
@@ -66,6 +71,18 @@ input[type="text"], input[type="password"], input[role="combobox"] {
   font-size: 16px;
   color: $layout-main-color;
 }
+
+.icon-btn {
+  border: none;
+  cursor: pointer;
+  line-height: 24px;
+  font-size: 16px;
+
+  &:hover {
+    color: $layout-main-color;
+  }
+}
+
 
 .flex-col {
   display: flex;
