--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -4,6 +4,7 @@
 @import "pages/login";
 @import "pages/lists";
 @import "pages/shopping-list";
+@import "pages/registration";
 @import "components/shopping-list-tile";
 @import "components/shopping-list-item";
 @import "components/add-product";
