--- a/client/src/style/pages/shopping-list.scss
+++ b/client/src/style/pages/shopping-list.scss
@@ -14,7 +14,8 @@
   }
 
   .quantity {
-    width: 100px;
+    width: 150px;
+    text-align: center;
   }
 
   .actions {
@@ -26,4 +27,8 @@
   &:not(:last-child) {
     border-bottom: 1px solid silver;
   }
+}
+
+.products-list {
+  overflow-y: auto;
 }
