--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -78,6 +78,7 @@ input[type="text"], input[type="password"], input[role="combobox"] {
   cursor: pointer;
   line-height: 24px;
   font-size: 16px;
+  background: transparent;
 
   &:hover {
     color: $layout-main-color;
