--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -8,6 +8,7 @@
 @import "components/shopping-list-tile";
 @import "components/shopping-list-item";
 @import "components/add-product";
+@import "components/back-button";
 @import "fontawesome-all.min.css";
 
 body {
