fixed add product

--- a/client/src/style/components/add-product.scss
+++ b/client/src/style/components/add-product.scss
@@ -21,6 +21,8 @@
       min-width: 0 !important;
       cursor: pointer;
       border: 1px solid silver;
+      overflow-x: auto;
+      max-height: 300px;
     }
   }
 }
