--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -33,6 +33,7 @@ input[type="text"], input[type="password"], input[role="combobox"] {
   padding-left: 10px;
   padding-right: 10px;
   box-sizing: border-box;
+  outline: none;
 }
 
 .title {
