--- a/client/src/style/pages/shopping-list.scss
+++ b/client/src/style/pages/shopping-list.scss
@@ -32,3 +32,10 @@
 .products-list {
   overflow-y: auto;
 }
+
+.add-btn {
+  width: fit-content;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
