--- a/client/src/style/components/shopping-list-item.scss
+++ b/client/src/style/components/shopping-list-item.scss
@@ -7,7 +7,7 @@
   padding: 5px 15px;
 
   &.checked {
-    background: #b7b4b4;
+    background: #b7b4b436;
     text-decoration: line-through;
   }
 
