--- a/client/src/style/components/shopping-list-tile.scss
+++ b/client/src/style/components/shopping-list-tile.scss
@@ -11,6 +11,10 @@
 
   > * {
     margin-bottom: 10px;
+    line-height: 20px;
+    overflow: hidden;
+    max-width: 100%;
+    text-overflow: ellipsis;
   }
 
   &:hover {
