--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -48,6 +48,7 @@ input[type="text"], input[type="password"], input[role="combobox"], input[type="
   justify-content: center;
   align-items: center;
   font-weight: bold;
+  padding: 0 50px;
 }
 
 .btn {
