--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -115,3 +115,7 @@ input[type="text"], input[type="password"], input[role="combobox"], input[type="
 .small-text {
   font-size: $small-font-size;
 }
+
+.hidden {
+  display: none;
+}
