--- a/client/src/style/components/spinner.scss
+++ b/client/src/style/components/spinner.scss
@@ -19,9 +19,9 @@
   border-right: 1.1em solid rgba(69,184,67, 0.2);
   border-bottom: 1.1em solid rgba(69,184,67, 0.2);
   border-left: 1.1em solid #45b843;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+  -webkit-transform: translateZ(0) translateY(-50%);
+  -ms-transform: translateZ(0) translateY(-50%);
+  transform: translateZ(0) translateY(-50%);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
   top: 50%;
