--- a/client/src/style/pages/registration.scss
+++ b/client/src/style/pages/registration.scss
@@ -3,6 +3,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    margin: auto;
+    min-width: 50%;
   }
 }
 
@@ -15,5 +17,17 @@
   > * {
     display: block;
     margin-bottom: 15px;
+  }
+
+  .radio-inline {
+    font-size: 14px;
+    margin-top: 5px;
+    input {
+      margin-right: 5px;
+    }
+
+    &:last-child {
+      margin-left: 15px;
+    }
   }
 }
