--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -121,3 +121,7 @@ input[type="text"], input[type="password"], input[role="combobox"], input[type="
 .hidden {
   display: none;
 }
+
+.err-label {
+  color: red;
+}
