--- a/client/src/style/pages/lists.scss
+++ b/client/src/style/pages/lists.scss
@@ -8,5 +8,11 @@
 }
 
 .generate-list-btn {
-  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.content-header {
+  color: $title-color;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
