--- a/client/src/style/pages/shopping-list.scss
+++ b/client/src/style/pages/shopping-list.scss
@@ -1,9 +1,20 @@
 @import "../variables";
 
+.shopping-list-page {
+  .content-header {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+  }
+}
+
 .header {
   display: flex;
   border-bottom: 1px solid silver;
   padding: 5px 15px;
+  flex-shrink: 0;
 
   .checkbox {
     width: 42px;
@@ -42,9 +53,8 @@
   min-width: 0;
 
   &:hover {
-    border: 1px solid black;
+    border: 1px solid $text-color;
     border-radius: 3px;
-
     .fa {
       visibility: visible;
     }
@@ -55,6 +65,7 @@
     font-size: 18px;
     visibility: hidden;
     align-self: center;
+    color: $text-color;
   }
 
 }
