--- a/client/src/style/pages/shopping-list.scss
+++ b/client/src/style/pages/shopping-list.scss
@@ -8,6 +8,15 @@
     align-items: center;
     font-size: 24px;
   }
+
+}
+
+.closed-header {
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
 }
 
 .header {
