--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -6,6 +6,7 @@ $title-color: #3ab377;
 
 $layout-main-color: #3ab377;
 $layout-base-color: #e4dfdf;
+$archived-color: #f5f5f5;
 
 $font-size: 16px;
 $small-font-size: 14px;
