--- a/client/src/style/components/shopping-list-item.scss
+++ b/client/src/style/components/shopping-list-item.scss
@@ -29,6 +29,10 @@
       background: white;
     }
 
+    input:disabled + label {
+      cursor: not-allowed;
+    }
+
 
     label:after {
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -52,7 +56,7 @@
       transform: rotate(-45deg);
     }
 
-    label:hover::after {
+    input:not(:disabled) + label:hover::after {
       -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
       filter: alpha(opacity=30);
       opacity: 0.3;
