--- a/client/src/style/components/shopping-list-tile.scss
+++ b/client/src/style/components/shopping-list-tile.scss
@@ -9,6 +9,7 @@
   margin: 5px;
   background: white;
   overflow: hidden;
+  position: relative;
 
   > * {
     margin-bottom: 10px;
@@ -23,5 +24,17 @@
     background: $layout-main-color;
     color: white;
     cursor: pointer;
+  }
+
+  .fa-clipboard-check {
+    font-size: 70px;
+  }
+
+  &.archived {
+    background-color: $archived-color;
+
+    &:hover {
+      color: $layout-main-color;
+    }
   }
 }
